--- a/views/register.html
+++ b/views/register.html
@@ -69,20 +69,13 @@
 <body>
   <form action="/register" method="POST">
     <h1>REGISTER</h1>
-    <input placeholder="Enter Your Name" type="text" name="name" id="name" />
+    <input placeholder="Enter Your Name" type="text" name="username" id="name" />
     <input placeholder="Enter Your Email" type="email" name="email" id="email" />
     <input placeholder="Enter Your Password" type="password" name="password" id="password" />
     <input type="submit" value="Login" />
 
   </form>
-  <form action="/user" method="GET">
-    <input type="submit" value="User" />
-  </form>
-
-
-  <form action="/deleted" method="DEL">
-    <input type="submit" value="Delete" />
-  </form>
+  
 </body>
 
 </html>
