--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,11 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    login page here 
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>RoboMeow | Login</title>
+    <link rel="stylesheet" href="/css/styles.css">
+  </head>
+
+
+
+  <body>
+    <form action="/login" method="POST">
+      <h1>LOGIN</h1>
+
+      {{#if message}}
+
+      <p>{{message}}</p>
+      
+        {{/if}} 
+    
+      <input
+        placeholder="Enter Your Email"
+        type="email"
+        name="email"
+        id="email"
+        required
+      />
+      <input
+        placeholder="Enter Your Password"
+        type="password"
+        name="password"
+        id="password"
+        required
+      />
+      <input type="submit" value="LOGIN" />
+    </form>
+  </body>
 </html>
