--- a/views/register.hbs
+++ b/views/register.hbs
@@ -12,7 +12,10 @@
     container mx-auto my-10 bg-blue flex-col flex "  >
       <h1 class="text-center">REGISTER</h1>
 
-      {{#if message}}{{/if}}
+      {{#if message}}
+      
+      <span> {{message}}  </span>
+      {{/if}}
 
       <input
         placeholder="Enter Your Name"
