--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -5,11 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
 </head>
-<body>t
+<body>
                                                                                           
-
-
-
     <h1> Hi this is dashbaord </h1>
 </body>
 </html>
