--- a/views/register.hbs
+++ b/views/register.hbs
@@ -8,37 +8,50 @@
   </head>
 
   <body>
-    <form action="/register" method="POST" class="
-    container mx-auto my-10 bg-blue flex-col flex "  >
-      <h1 class="text-center">REGISTER</h1>
 
-      {{#if message}}
-      
-      <span> {{message}}  </span>
-      {{/if}}
+    <div class="container flex flex-col w-auto mx-auto mt-5  h-96 justify-center">
 
-      <input
-        placeholder="Enter Your Name"
-        type="text"
-        name="username"
-        id="name"
-        required
-      />
-      <input
-        placeholder="Enter Your Email"
-        type="email"
-        name="email"
-        id="email"
-        required
-      />
-      <input
-        placeholder="Enter Your Password"
-        type="password"
-        name="password"
-        id="password"
-        required
-      />
-      <input type="submit" value="REGISTER" class="w-30 bg-pink" />
-    </form>
+      <form
+        action="/register"
+        method="POST"
+        class="container flex flex-col w-auto mx-auto mt-5"
+      >
+
+        <h1 class="text-4xl font-bold tracking-tight text-gray-900 sm:text-6xl mt-10">Register With us</h1>
+
+        {{#if message}}
+
+          <span> {{message}} </span>
+        {{/if}}
+
+        <input
+          class="mt-5"
+          placeholder="Enter Your Name"
+          type="text"
+          name="username"
+          id="name"
+          required
+        />
+        <input
+          class="mt-5"
+          placeholder="Enter Your Email"
+          type="email"
+          name="email"
+          id="email"
+          required
+        />
+        <input
+          class="mt-5"
+          placeholder="Enter Your Password"
+          type="password"
+          name="password"
+          id="password"
+          required
+        />
+        <input type="submit" value="REGISTER" class="mt-5 rounded-md bg-indigo-600 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600" />
+      </form>
+
+    </div>
+
   </body>
 </html>
